Bug fixes and method based routing.

--- a/web/private/index.html
+++ b/web/private/index.html
@@ -9,9 +9,10 @@
   <h1>
     Yo it seems to work perfectly!!
   </h1>
-  <form action="">
-    <input type="text">
-    <input type="password">
+  <form action="/submit" method="post">
+    <input type="text" name="name">
+    <input type="text" name="age">
+    <input type="submit">
   </form>
 </body>
 </html>
