now can send files

--- a/web/private/index.html
+++ b/web/private/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yoooo</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <h1>
@@ -14,5 +15,11 @@
     <input type="text" name="age">
     <input type="submit">
   </form>
+  <h2>png</h2>
+  <img src="/png.png" alt="">
+  <h2>jpg</h2>
+  <img src="/jpg.jpg" alt="">
+  <h2>jpeg</h2>
+  <img src="/jpeg.jpeg" alt="">
 </body>
 </html>
